objects/umModerator__c.object
<CustomObject><fields>
        <fullName>umSite_id__c</fullName>
        <description>Id of the parent (umSite custom setting).</description>
        <inlineHelpText>Id of the parent (umSite custom setting).</inlineHelpText>
        <label>umSite Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>userId__c</fullName>
        <description>Agent Id.</description>
        <inlineHelpText>Agent Id.</inlineHelpText>
        <label>User Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>userInfo__c</fullName>
        <description>Agent Username.</description>
        <inlineHelpText>Agent Username.</inlineHelpText>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><label>umModerator</label><visibility>Public</visibility></CustomObject>